added more items to the list

--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,5 @@
 [ ]	make battle station fully
 [ ] lighting hands??
 [ ] investigate draft in the office
-[ ] wrinkle cream
+[ ] cream puff
+[ ] bugsbunny
